new arrow logic, small fixes